<resources>
    <string name="app_name">Navigation Drawer + Toolbar</string>
    <string name="home_nav">Home</string>
    <string name="favorite_nav">Favorite</string>
    <string name="history_nav">Historiy</string>
    <string name="account_nav">Account</string>
    <string name="change_pass_nav">Change pass</string>
    <string name="my_profile_nav">My profile</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_view_history_energy_fragment">viewHistoryEnergyFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="or_sign_in_by">Or Sign in by</string>
    <string name="or_sign_up_by">Or Sign up by</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_change_pass_fragment">changePassFragment</string>

</resources>